# bilingual-subtitle-tool

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  README_EN.md  README_HF.md  code.md  install.py  main.py  product.md  pyproject.toml  requirements.txt  run_tests.py  start.sh  test_environment.sh
.github/workflows/: push_to_hub.yml
src/: __init__.py  audio_extractor.py  config.py  environment.py  speech_recognizer.py  subtitle_generator.py  translator.py  utils.py  video_processor.py
tests/: test_config.py  test_translator.py  test_utils.py
